<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/ThemeOverlay.BackseatDrivers.FullscreenContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rides.RideDetailsFragment">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:id="@+id/full_screen_content"
        android:layout_margin="50dp"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ride_details_title"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/num_passengers_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/available_seats"
            android:inputType="numberSigned"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/departure_date_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/departure_time"
            android:inputType="datetime"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/departure_time_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/time_of_day"
            android:inputType="datetime"
            android:minHeight="48dp" />

<!--        <FrameLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:fitsSystemWindows="true">-->

            <Button
                android:id="@+id/post_ride_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:text="@string/post_ride" />

            <Button
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="clip_horizontal"
                android:text="@string/back" />
<!--        </FrameLayout>-->

    </LinearLayout>

</FrameLayout>