<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="300dp"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/login_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_text"
            android:layout_marginBottom="10dp"
            android:textSize="28sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/email_hint_text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_btn_text" />

        <TextView
            android:id="@+id/no_acct_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup_btn_text" />
    </LinearLayout>



</LinearLayout>