<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
<<<<<<< HEAD
    android:background="@drawable/waves"
=======
>>>>>>> 3c9c91cb95db167399dd9690609e8ec6184f2b5f
    tools:context=".auth.SignUpActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.fragment.app.FragmentContainerView>

<<<<<<< HEAD
        <EditText
            android:id="@+id/first_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="#30ffffff"
            android:hint="@string/firstname_hint_text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/last_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/lastname_hint_text"
            android:background="#30ffffff"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/age_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/age_hint_text"
            android:background="#30ffffff"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:background="#30ffffff"
            android:layout_marginVertical="10dp"
            android:entries="@array/gender_spinner_array" />

        <Spinner
            android:id="@+id/license_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:background="#30ffffff"
            android:layout_marginVertical="10dp"
            android:textColor="#dff2f5"
            android:entries="@array/license_type_array" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/email_hint_text"

            android:background="#30ffffff"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/password_hint_text"
            android:background="#30ffffff"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/confirm_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/confirm_password_hint_text"
            android:background="#30ffffff"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup_btn_text" />
    </LinearLayout>

</ScrollView>
=======
</LinearLayout>
>>>>>>> 3c9c91cb95db167399dd9690609e8ec6184f2b5f
