<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.VerifySignUpActivity">

    <TextView
        android:id="@+id/verify_email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_email_text" />

    <TextView
        android:id="@+id/verify_email_actions_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/continue_btn_text" />

    <TextView
        android:id="@+id/resend_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/resend_email_text" />

</LinearLayout>