<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditProfileActivity"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/personal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_iv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/carpoolimage" />

        <TextView
            android:id="@+id/first_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname_hint_text"
            android:layout_below="@+id/profile_iv" />
        <EditText
            android:id="@+id/first_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name_title" />

        <TextView
            android:id="@+id/last_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname_hint_text"
            android:layout_below="@+id/first_name_et" />
        <EditText
            android:id="@+id/last_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_title" />

        <TextView
            android:id="@+id/phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_hint_text"
            android:layout_below="@+id/last_name_et" />
        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_below="@id/phone_title" />

        <TextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_hint_text"
            android:layout_below="@+id/phone_et" />
        <EditText
            android:id="@+id/address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:layout_below="@+id/address_title" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:layout_below="@+id/personal_info">
        <TextView
            android:id="@+id/driver_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Driver Profile"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/license_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginVertical="10dp"
            android:layout_below="@id/driver_info_title"/>

        <TextView
            android:id="@+id/vehicle_model_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_model_text"
            android:layout_below="@+id/license_type_spinner" />
        <EditText
            android:id="@+id/vehicle_model_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vehicle_model_title" />

        <TextView
            android:id="@+id/vehicle_color_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_color_text"
            android:layout_below="@+id/vehicle_model_et" />
        <EditText
            android:id="@+id/vehicle_color_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vehicle_color_title" />

        <TextView
            android:id="@+id/vehicle_rules_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_rules_text"
            android:layout_below="@+id/vehicle_color_et" />
        <EditText
            android:id="@+id/vehicle_rules_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vehicle_rules_title" />
    </RelativeLayout>

</RelativeLayout>
